Make footer links darker than footer text

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -157,7 +157,7 @@ body
       text-align: center
       margin: 3em auto
       a
-        color: #aaa
+        color: #646464
         &:hover
           color: #0881b3
       li
