Add github/twitter to footer

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -31,8 +31,9 @@
     </section>
     <footer>
       <p>
-        All articles authored by Eric Boehs<br>
-        <a href="mailto:eric+ebblog@brightbit.com">Hire me</a> for Ruby, web and iOS development
+        <a href="mailto:ericboehs+hire@gmail.com">Hire me</a> for Ruby, Web and iOS development<br>I love integrating with hardware too<br>
+        <a href="http://github.com/ericboehs">github/ericboehs</a> | <a href="http://twitter.com/ericboehs">twitter/ericboehs</a>
+
       </p>
     </footer>
     <%= javascript_include_tag "all" %>
