--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -3,14 +3,13 @@
   <head>
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <%= feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed" %>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
     <link rel="me" href="http://www.google.com/profiles/ericboehs">
     <%# <link rel="author" type="text/plain" href="/humans.txt"> %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta property="og:site_name" content="ericboehs.com">
 
     <title><%= current_page.data.title || "Eric Boehs" %></title>
-    <%= stylesheet_link_tag "normalize", "all" %>
+    <%= stylesheet_link_tag "all" %>
   </head>
 
   <body class="<%= page_classes %>">
@@ -37,9 +36,7 @@
       </p>
     </footer>
     <%= javascript_include_tag "all" %>
-    <%= javascript_include_tag "highlight.pack" %>
     <script>hljs.initHighlightingOnLoad()</script>
-    <%= stylesheet_link_tag "solarized_light" %>
     <%#TODO: Add google analytics %>
   </body>
 </html>
