--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -1,10 +1,17 @@
+/*
+ *= require_self
+ */
+
+@import "normalize"
+@import "solarized_light"
+
 html
   -webkit-font-smoothing: antialiased
 
 body
   color: #222222
   font-size: 22px
-  font-family: 'Open sans', sans-serif
+  font-family: Helvetica, sans-serif
   font-weight: 400
   line-height: 1.5em
   padding: 0
@@ -108,7 +115,7 @@ small
 h1
   color: #000
   font-size: 1.75em
-  font-family: 'Open sans', sans-serif
+  font-family: Helvetica, sans-serif
   font-weight: 400
   text-transform: capitalize
   line-height: 1.2em
