--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -83,7 +83,7 @@ code
   margin: 0 2px
   padding: 0 5px
   border: 1px solid #ddd
-  background-color: #f8f8f8
+  background-color: #f8f8f8 !important
   border-radius: 3px
   line-height: 1.25em
 
