--- a/source/stylesheets/solarized_light.css
+++ b/source/stylesheets/solarized_light.css
@@ -1,90 +1,108 @@
 /*
- *
- * Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmail.com>
- *
- * */
 
-/*pre code {
- *   display: block; padding: 0.5em;
- *     background: #fdf6e3; color: #657b83;
- *     }*/
+Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmail.com>
 
-pre .comment,
-pre .template_comment,
-pre .diff .header,
-pre .doctype,
-pre .lisp .string,
-pre .javadoc {
+*/
+
+.hljs {
+  display: block;
+  overflow-x: auto;
+  padding: 0.5em;
+  background: #fdf6e3;
+  color: #657b83;
+  -webkit-text-size-adjust: none;
+}
+
+.hljs-comment,
+.diff .hljs-header,
+.hljs-doctype,
+.hljs-pi,
+.lisp .hljs-string,
+.hljs-javadoc {
   color: #93a1a1;
-  font-style: italic;
-  }
+}
 
-  pre .keyword,
-  pre .css .rule .keyword,
-  pre .winutils,
-  pre .javascript .title,
-  pre .method,
-  pre .addition,
-  pre .css .tag,
-  pre .lisp .title {
-    color: #859900;
-    }
+/* Solarized Green */
+.hljs-keyword,
+.hljs-winutils,
+.method,
+.hljs-addition,
+.css .hljs-tag,
+.hljs-request,
+.hljs-status,
+.nginx .hljs-title {
+  color: #859900;
+}
 
-    pre .number,
-    pre .command,
-    pre .string,
-    pre .tag .value,
-    pre .phpdoc,
-    pre .tex .formula,
-    pre .regexp,
-    pre .hexcolor {
-      color: #2aa198;
-      }
+/* Solarized Cyan */
+.hljs-number,
+.hljs-command,
+.hljs-string,
+.hljs-tag .hljs-value,
+.hljs-rules .hljs-value,
+.hljs-phpdoc,
+.hljs-dartdoc,
+.tex .hljs-formula,
+.hljs-regexp,
+.hljs-hexcolor,
+.hljs-link_url {
+  color: #2aa198;
+}
 
-      pre .title,
-      pre .localvars,
-      pre .function .title,
-      pre .chunk,
-      pre .decorator,
-      pre .builtin,
-      pre .built_in,
-      pre .lisp .title,
-      pre .identifier,
-      pre .title .keymethods,
-      pre .id {
-        color: #268bd2;
-        }
+/* Solarized Blue */
+.hljs-title,
+.hljs-localvars,
+.hljs-chunk,
+.hljs-decorator,
+.hljs-built_in,
+.hljs-identifier,
+.vhdl .hljs-literal,
+.hljs-id,
+.css .hljs-function {
+  color: #268bd2;
+}
 
-        pre .attribute,
-        pre .variable,
-        pre .instancevar,
-        pre .lisp .body,
-        pre .smalltalk .number,
-        pre .constant,
-        pre .class .title,
-        pre .parent,
-        pre .haskell .label {
-          color: #b58900;
-          }
+/* Solarized Yellow */
+.hljs-attribute,
+.hljs-variable,
+.lisp .hljs-body,
+.smalltalk .hljs-number,
+.hljs-constant,
+.hljs-class .hljs-title,
+.hljs-parent,
+.hljs-type,
+.hljs-link_reference {
+  color: #b58900;
+}
 
-          pre .preprocessor,
-          pre .pi,
-          pre .shebang,
-          pre .symbol,
-          pre .diff .change,
-          pre .special,
-          pre .keymethods,
-          pre .attr_selector,
-          pre .important,
-          pre .subst,
-          pre .cdata {
-            color: #cb4b16;
-            }
+/* Solarized Orange */
+.hljs-preprocessor,
+.hljs-preprocessor .hljs-keyword,
+.hljs-pragma,
+.hljs-shebang,
+.hljs-symbol,
+.hljs-symbol .hljs-string,
+.diff .hljs-change,
+.hljs-special,
+.hljs-attr_selector,
+.hljs-subst,
+.hljs-cdata,
+.css .hljs-pseudo,
+.hljs-header {
+  color: #cb4b16;
+}
 
-            pre .deletion {
-              color: #dc322f;
-              }
+/* Solarized Red */
+.hljs-deletion,
+.hljs-important {
+  color: #dc322f;
+}
 
-              pre .tex .formula {
-                background: #eee8d5;
-                }
+/* Solarized Violet */
+.hljs-link_label {
+  color: #6c71c4;
+}
+
+.tex .hljs-formula {
+  background: #eee8d5;
+}
