--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -86,6 +86,7 @@ code
   background-color: #f8f8f8 !important
   border-radius: 3px
   line-height: 1.25em
+  font-size: 16px
 
 pre
   margin: 0 0 1.5em 0
@@ -275,3 +276,9 @@ ol.list li
   list-style: decimal
   ol li
     list-style: lower-alpha
+
+.centered
+  width: 800px !important
+  margin-left: auto !important
+  margin-right: auto !important
+  display: block !important
