--- a/source/stylesheets/all.css.sass
+++ b/source/stylesheets/all.css.sass
@@ -2,8 +2,8 @@
  *= require_self
  */
 
-@import "normalize"
-@import "solarized_light"
+@import "normalize.css"
+@import "solarized_light.css"
 
 html
   -webkit-font-smoothing: antialiased
