--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -35,7 +35,7 @@
 
       </p>
     </footer>
-    <%= javascript_include_tag "all" %>
+    <%= javascript_include_tag "highlight.pack" %>
     <script>
       hljs.initHighlightingOnLoad();
 
